Creation of PoC
Code cleanup
Moving index file to web folder
Adding explicit 7.4 reference in composer file
Listing web hook url and code cleanup
Adding slack integration
Adding change to refine StackOverflow job URL
Changing method to get url for stack overflow job
Adding shell script to rebase heroku deploy branch
Adding initial file for LaraJobs
Refactoring attributes to be accessible by child classes
Refactoring logic to scrape content
Update to rebase heroku shell script
Return to original branch after rebase done
Double quote to prevent globbing and word splitting
Removing web hook
Adding communicator logic for StackOverflow over Slack
Removing web hook from code
Making index StackOverflow Slack integration configurable
Adding PHPUnit dependency
Adding changes to log output of job wrapper

--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,24 @@
 {
-    "name": "coco/source-watcher",
-    "description": "Project which allows to watch different sources of data",
-    "type": "project",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Jean Paul Ruiz",
-            "email": "jpruiz114@gmail.com"
-        }
-    ],
-    "require": {
-        "ext-dom": "*",
-        "vlucas/phpdotenv": "^4.1"
-    },
-    "autoload": {
-        "psr-4": {
-            "Coco\\SourceWatcher\\": "src/"
-        }
+  "name": "coco/source-watcher",
+  "description": "Project which allows to watch different sources of data",
+  "type": "project",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Jean Paul Ruiz",
+      "email": "jpruiz114@gmail.com"
     }
+  ],
+  "require": {
+    "ext-curl": "*",
+    "ext-dom": "*",
+    "ext-json": "*",
+    "vlucas/phpdotenv": "^4.1",
+    "php": "~7.4"
+  },
+  "autoload": {
+    "psr-4": {
+      "Coco\\SourceWatcher\\": "src/"
+    }
+  }
 }
