--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "ext-json": "*",
     "flow/jsonpath": "^0.5.0",
     "php": "~7.4",
-    "vlucas/phpdotenv": "^4.1"
+    "vlucas/phpdotenv": "^4.1",
+    "symfony/translation": "^5.0"
   },
   "autoload": {
     "psr-4": {
