--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "flow/jsonpath": "^0.5.0",
     "php": "~7.4",
     "vlucas/phpdotenv": "^4.1",
-    "symfony/translation": "^5.0"
+    "symfony/yaml": "^5.0"
   },
   "autoload": {
     "psr-4": {
