--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "ext-curl": "*",
     "ext-dom": "*",
     "ext-json": "*",
+    "ext-pgsql": "*",
     "flow/jsonpath": "^0.5.0",
     "php": "~7.4",
     "vlucas/phpdotenv": "^4.1",
