--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ dist: bionic
 php:
   - 7.4
 
+services:
+  - mysql
+  - postgresql
+
 before_install:
   - echo "deb [trusted=yes] https://apt.secrethub.io stable main" | sudo tee /etc/apt/sources.list.d/secrethub.sources.list
   - sudo apt-get update && sudo apt-get install -y secrethub-cli
