--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "flow/jsonpath": "^0.5.0",
     "php": "~7.4",
     "vlucas/phpdotenv": "^4.1",
-    "symfony/yaml": "^5.0"
+    "symfony/yaml": "^5.0",
+    "monolog/monolog": "^2.1"
   },
   "autoload": {
     "psr-4": {
