--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,5 @@
 sonar.coverage.exclusions=
 sonar.exclusions=
+
+sonar.php.coverage.reportPaths=./phpunit-report/coverage-report.xml
+sonar.php.tests.reportPath=./phpunit-report/tests-report.xml
