--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,7 @@
-sonar.coverage.exclusions=
-sonar.exclusions=
+sonar.sources=jobs/,resources/,samples/,src/,tests/,web/
+
+sonar.coverage.exclusions=docker/,jobs/,phpunit-report/,resources/,samples/,tests/,vendor/,web/
+sonar.exclusions=docker/**,jobs/**,phpunit-report/**,resources/**,samples/**,tests/**,vendor/**,web/**
 
 sonar.php.coverage.reportPaths=./phpunit-report/coverage-report.xml
 sonar.php.tests.reportPath=./phpunit-report/tests-report.xml
