Adding new Text File extractor

--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,13 @@
     "ext-dom": "*",
     "ext-json": "*",
     "ext-pgsql": "*",
-    "flow/jsonpath": "*",
-    "guzzlehttp/guzzle": "^7.2",
+    "guzzlehttp/guzzle": "*",
+    "malios/php-to-ascii-table": "*",
     "monolog/monolog": "*",
     "php": "*",
-    "php-snippets/circular-array": "^1.0",
+    "php-snippets/circular-array": "*",
     "ramsey/uuid": "*",
+    "softcreatr/jsonpath": "*",
     "symfony/yaml": "*",
     "vlucas/phpdotenv": "*"
   },
