--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,37 @@
-version: '3'
-
+version: "3.7"
 services:
-
-  web:
-    image: nginx:latest
-    ports: 
-      - "8080:80"
-    volumes:
-      - ./:/var/www
-      - ./docker/default.conf:/etc/nginx/conf.d/default.conf
-    links:
-      - php
-
-  php:
+  web-server:
     build:
-      context: ./docker/php
+      dockerfile: php.Dockerfile
+      context: .
+    restart: always
     volumes:
-      - ./:/var/www
+      - "./:/var/www/"
+      - "./docker/php/conf.d/error_reporting.ini:/usr/local/etc/php/conf.d/error_reporting.ini"
+      - "./docker/php/conf.d/xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini"
+    ports:
+      - "8181:80"
+    extra_hosts:
+      - "outside:${HOST_IP}"
+    environment:
+      - HOST_IP=${HOST_IP}
 
+  mysql-server:
+    image: mysql:8.0.19
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: secret
+    volumes:
+      - mysql-data:/var/lib/mysql
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin:5.0.1
+    restart: always
+    environment:
+      PMA_HOST: mysql-server
+      PMA_USER: root
+      PMA_PASSWORD: secret
+    ports:
+      - "5000:80"
+volumes:
+  mysql-data:
