--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,9 @@ services:
       - "./docker/php/conf.d/xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini"
     ports:
       - "8181:80"
+    # https://github.com/compose-spec/compose-spec/blob/master/spec.md#extra_hosts
+    # extra_hosts adds hostname mappings to the container network interface configuration (/etc/hosts for Linux).
+    # Values MUST set hostname and IP address for additional hosts in the form of HOSTNAME:IP.
     extra_hosts:
       - "outside:${HOST_IP}"
     environment:
