Adding gender guess step

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "ramsey/uuid": "*",
     "softcreatr/jsonpath": "*",
     "symfony/yaml": "*",
+    "tuqqu/gender-detector": "^0.3.0",
     "vlucas/phpdotenv": "*"
   },
   "autoload": {
